Burak Sandbox/force-app/main/default/objects/Account/fields/Features_Requested__c.field-meta.xml
<CustomField>
    <fullName>Features_Requested__c</fullName>
    <inlineHelpText>Did they mention any features they wish Choco had?)</inlineHelpText>
    <label>Features Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics &amp; Reports</fullName>
            </value>
            <value>
                <fullName>Change Supplier Details</fullName>
            </value>
            <value>
                <fullName>Delivery Check</fullName>
            </value>
            <value>
                <fullName>Inventory Tracking</fullName>
            </value>
            <value>
                <fullName>Minimum Order Value</fullName>
            </value>
            <value>
                <fullName>Order Drafts</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>POS Integration</fullName>
            </value>
            <value>
                <fullName>Product Pictures</fullName>
            </value>
            <value>
                <fullName>Product Prices</fullName>
            </value>
            <value>
                <fullName>Reminder for Orders</fullName>
            </value>
            <value>
                <fullName>Roles &amp; Permissions</fullName>
            </value>
            <value>
                <fullName>Search by Product not Supplier</fullName>
            </value>
            <value>
                <fullName>Web / Desktop Application</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
                <isActive>false</isActive>
                <label>Analytics</label>
            </value>
            <value>
                <fullName>Multilocation</fullName>
                <isActive>false</isActive>
                <label>Multilocation</label>
            </value>
            <value>
                <fullName>Order tracking</fullName>
                <isActive>false</isActive>
                <label>Order tracking</label>
            </value>
            <value>
                <fullName>Permissions</fullName>
                <isActive>false</isActive>
                <label>Permissions</label>
            </value>
            <value>
                <fullName>Prices</fullName>
                <isActive>false</isActive>
                <label>Prices</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>