Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_Opp_Date__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_Opp_Date__c</fullName>
    <description>Identifies when the person became an Opp (usually denotes when a quote is requested).</description>
    <label>FF Company Opp Date</label>
    <type>Date</type>
</CustomField>