Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_Original_Source__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_Original_Source__c</fullName>
    <description>First known conversion source.</description>
    <label>FF Company Original Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Web Referral</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>TSO Email</fullName>
            </value>
            <value>
                <fullName>TSO Call</fullName>
            </value>
            <value>
                <fullName>TSO Social</fullName>
            </value>
            <value>
                <fullName>Sales Email</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Sales Social</fullName>
            </value>
            <value>
                <fullName>Live Meeting</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>List Import</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>SMS Text</fullName>
            </value>
            <value>
                <fullName>Referral - Network</fullName>
            </value>
            <value>
                <fullName>Referral - Partner</fullName>
            </value>
            <value>
                <fullName>Referral - Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>