Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_Reason_Dead__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_Reason_Dead__c</fullName>
    <description>Additional context for why a contact was marked “dead.”</description>
    <label>FF Company Reason Dead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No BANT</fullName>
            </value>
            <value>
                <fullName>Selected Competitor</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Not a priority</fullName>
            </value>
            <value>
                <fullName>Solution in Place</fullName>
            </value>
            <value>
                <fullName>Not Convinced of Value</fullName>
            </value>
            <value>
                <fullName>Not at Company Anymore</fullName>
            </value>
            <value>
                <fullName>Not Right Contact</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>