Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_SAL_Date__c</fullName>
    <description>Identifies when the person became a Sales Accepted Lead (usually denotes first intro call booked).</description>
    <label>FF Company SAL Date</label>
    <type>Date</type>
</CustomField>