Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_SQL_Date__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_SQL_Date__c</fullName>
    <description>Identifies when the person became a Sales Qualified Lead (usually denotes when a demo is completed or BANT information is fully gathered).</description>
    <label>FF Company SQL Date</label>
    <type>Date</type>
</CustomField>