Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Company_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>FF_Company_Won_Date__c</fullName>
    <description>Identifies when the person became a Customer (usually denotes when an agreement is signed or transaction is completed).</description>
    <label>FF Company Won Date</label>
    <type>Date</type>
</CustomField>