Burak Sandbox/force-app/main/default/objects/Account/fields/FF_HVT__c.field-meta.xml
<CustomField>
    <fullName>FF_HVT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the account is designated as high priority, e.g. a member of named accounts targeted in an ABM/ABS campaign.</description>
    <label>FF HVT</label>
    <type>Checkbox</type>
</CustomField>