Burak Sandbox/force-app/main/default/objects/Account/fields/FF_HVT_Cohort__c.field-meta.xml
<CustomField>
    <fullName>FF_HVT_Cohort__c</fullName>
    <description>On HVT accounts, this field identifies which ideal customer profile tier the target belongs to.</description>
    <label>FF HVT Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>