Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Initial_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>FF_Initial_Response_Type__c</fullName>
    <description>Provides context for the prospect’s initial reaction to whatever offer they were presented with (positive, neutral, or negative).</description>
    <label>FF Initial Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>More Information</fullName>
            </value>
            <value>
                <fullName>Correct Contact</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Not right contact</fullName>
            </value>
            <value>
                <fullName>Check back later</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Solution in place</fullName>
            </value>
            <value>
                <fullName>Solution not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>