Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Rep_Owner__c.field-meta.xml
<CustomField>
    <fullName>FF_Rep_Owner__c</fullName>
    <description>Identifies the FullFunnel team member working this record.</description>
    <label>FF Rep Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alyssa Gesek</fullName>
            </value>
            <value>
                <fullName>Walt Pitts</fullName>
            </value>
            <value>
                <fullName>Ryder Brooks</fullName>
            </value>
            <value>
                <fullName>Xennia Espinoza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>