Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Updated_Record_Info__c.field-meta.xml
<CustomField>
    <fullName>FF_Updated_Record_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if a FullFunnel team member corrected information on the record.</description>
    <label>FF Updated Record Info</label>
    <type>Checkbox</type>
</CustomField>