Burak Sandbox/force-app/main/default/objects/Account/fields/FF_Working__c.field-meta.xml
<CustomField>
    <fullName>FF_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if a FullFunnel team member made an impact on the record.</description>
    <label>FF Working</label>
    <type>Checkbox</type>
</CustomField>