Burak Sandbox/force-app/main/default/objects/Account/fields/Files_Comment__c.field-meta.xml
<CustomField>
    <fullName>Files_Comment__c</fullName>
    <inlineHelpText>Please make use of the template below. Try to be as specific as possible</inlineHelpText>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>