Burak Sandbox/force-app/main/default/objects/Account/fields/First_Delivery_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Delivery_Check_Date__c</fullName>
    <label>First Delivery Check Date</label>
    <type>DateTime</type>
</CustomField>