Burak Sandbox/force-app/main/default/objects/Account/fields/First_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Date__c</fullName>
    <description>First Order Date</description>
    <label>FOM Date</label>
    <type>DateTime</type>
</CustomField>