Burak Sandbox/force-app/main/default/objects/Account/fields/First_Order_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Received_Date__c</fullName>
    <inlineHelpText>Date the supplier received the first order via Choco</inlineHelpText>
    <label>First Order Received Date</label>
    <type>DateTime</type>
</CustomField>