Burak Sandbox/force-app/main/default/objects/Account/fields/First_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Received__c</fullName>
    <label>First Payment Received</label>
    <type>Date</type>
</CustomField>