Burak Sandbox/force-app/main/default/objects/Account/fields/First_Team_Order__c.field-meta.xml
<CustomField>
    <fullName>First_Team_Order__c</fullName>
    <label>First Team Order</label>
    <type>DateTime</type>
</CustomField>