Burak Sandbox/force-app/main/default/objects/Account/fields/Fleet_details__c.field-meta.xml
<CustomField>
    <fullName>Fleet_details__c</fullName>
    <label>Fleet details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sprinter</fullName>
            </value>
            <value>
                <fullName>Sprinter (Ref.)</fullName>
            </value>
            <value>
                <fullName>3,5 t</fullName>
            </value>
            <value>
                <fullName>3,5 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>7,5 t</fullName>
            </value>
            <value>
                <fullName>7,5 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>9 t</fullName>
            </value>
            <value>
                <fullName>9 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>12 t</fullName>
            </value>
            <value>
                <fullName>12 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>18 t</fullName>
            </value>
            <value>
                <fullName>18 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>26 t</fullName>
            </value>
            <value>
                <fullName>26 t (Ref.)</fullName>
            </value>
            <value>
                <fullName>40 t</fullName>
            </value>
            <value>
                <fullName>40 t (Ref.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>