Burak Sandbox/force-app/main/default/objects/Account/fields/Flexi_Churn__c.field-meta.xml
<CustomField>
    <fullName>Flexi_Churn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Account is known to churn to Non Active User status due to infrequent orders only to continue to reorder. The Account will still be evaluated for Hard Churn upon which it will trigger the Churn processes.</description>
    <label>Flexi-Churn</label>
    <type>Checkbox</type>
</CustomField>