Burak Sandbox/force-app/main/default/objects/Account/fields/Follow_Up_Details__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Details__c</fullName>
    <label>Follow-Up Details</label>
    <type>TextArea</type>
</CustomField>