Burak Sandbox/force-app/main/default/objects/Account/fields/Follow_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Reason__c</fullName>
    <label>Follow-Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Outreach</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Product Demo</fullName>
            </value>
            <value>
                <fullName>Technical Call / Feasibility</fullName>
            </value>
            <value>
                <fullName>Proposal Review</fullName>
            </value>
            <value>
                <fullName>Commercial / Contract Review</fullName>
            </value>
            <value>
                <fullName>Pre-Implementation Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Competition Lock-in</fullName>
                <isActive>false</isActive>
                <label>Competition Lock-in</label>
            </value>
            <value>
                <fullName>Feature missing</fullName>
                <isActive>false</isActive>
                <label>Feature missing</label>
            </value>
            <value>
                <fullName>Not interested</fullName>
                <isActive>false</isActive>
                <label>Not interested</label>
            </value>
            <value>
                <fullName>Other business reasons</fullName>
                <isActive>false</isActive>
                <label>Other business reasons</label>
            </value>
            <value>
                <fullName>Other technical reasons</fullName>
                <isActive>false</isActive>
                <label>Other technical reasons</label>
            </value>
            <value>
                <fullName>Too expensive</fullName>
                <isActive>false</isActive>
                <label>Too expensive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>