Burak Sandbox/force-app/main/default/objects/Account/fields/Founding_Year__c.field-meta.xml
<CustomField>
    <fullName>Founding_Year__c</fullName>
    <description>Contains the date of a business&apos; registration with public authorities</description>
    <label>Founding Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>