Burak Sandbox/force-app/main/default/objects/Account/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <label>Friday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>