Burak Sandbox/force-app/main/default/objects/Account/fields/GMaps_Rating__c.field-meta.xml
<CustomField>
    <fullName>GMaps_Rating__c</fullName>
    <label>GMaps Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>