Burak Sandbox/force-app/main/default/objects/Account/fields/GMaps_Reviews__c.field-meta.xml
<CustomField>
    <fullName>GMaps_Reviews__c</fullName>
    <label>GMaps Reviews</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>