Burak Sandbox/force-app/main/default/objects/Account/fields/GMV__c.field-meta.xml
<CustomField>
    <fullName>GMV__c</fullName>
    <label>GMV Performance (Deprecate)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>