Burak Sandbox/force-app/main/default/objects/Account/fields/GMV_Contribution__c.field-meta.xml
<CustomField>
    <fullName>GMV_Contribution__c</fullName>
    <label>GMV Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Spender</fullName>
            </value>
            <value>
                <fullName>Medium Spender</fullName>
            </value>
            <value>
                <fullName>Low Spender</fullName>
            </value>
            <value>
                <fullName>Long Tail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>