Burak Sandbox/force-app/main/default/objects/Account/fields/Google_Maps_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Link__c</fullName>
    <formula>IF(
 NOT(ISBLANK( Google_Place_ID__c)),
HYPERLINK(
&quot;https://www.google.com/maps/place/?q=place_id:&quot;&amp;Google_Place_ID__c,
&quot;Google Maps Link&quot;
),
HYPERLINK(
&quot;https://developers.google.com/maps/documentation/javascript/examples/places-placeid-finder&quot;,
&quot;Find Place Id&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Maps Link</label>
    <type>Text</type>
</CustomField>