Burak Sandbox/force-app/main/default/objects/Account/fields/Google_Place_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Place_ID__c</fullName>
    <externalId>true</externalId>
    <label>Google Place ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>