Burak Sandbox/force-app/main/default/objects/Account/fields/Handover_to_Remote_AM__c.field-meta.xml
<CustomField>
    <fullName>Handover_to_Remote_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover to Remote AM</label>
    <type>Checkbox</type>
</CustomField>