Burak Sandbox/force-app/main/default/objects/Account/fields/Hard_Churned_8_Weeks_Ago__c.field-meta.xml
<CustomField>
    <fullName>Hard_Churned_8_Weeks_Ago__c</fullName>
    <formula>DATEVALUE(Last_Order_Time__c)  &lt;= TODAY() - 98</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hard Churned 8 Weeks Ago</label>
    <type>Checkbox</type>
</CustomField>