Burak Sandbox/force-app/main/default/objects/Account/fields/HELPFIELD_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>HELPFIELD_Parent_Account__c</fullName>
    <label>HELPFIELD-Parent Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>