Burak Sandbox/force-app/main/default/objects/Account/fields/Hidden_ID__c.field-meta.xml
<CustomField>
    <fullName>Hidden_ID__c</fullName>
    <label>Hidden_ID</label>
    <type>TextArea</type>
</CustomField>