Burak Sandbox/force-app/main/default/objects/Account/fields/Hidden_Tier__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Tier__c</fullName>
    <label>Hidden Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>