Burak Sandbox/force-app/main/default/objects/Account/fields/ID_Account_Referral__c.field-meta.xml
<CustomField>
    <fullName>ID_Account_Referral__c</fullName>
    <description>ID of the reffered Account saved in the Account Referral (for sending out email to acocunt referral)</description>
    <label>ID Account Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>