Burak Sandbox/force-app/main/default/objects/Account/fields/Inbound_Approach__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Approach__c</fullName>
    <inlineHelpText>Please indicate whether the account classifies as Self-Service or VM Handover inbound based on our ICP</inlineHelpText>
    <label>Inbound Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>VM Handover (ICP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>