Burak Sandbox/force-app/main/default/objects/Account/fields/Inbound_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Created_Date__c</fullName>
    <label>Inbound Created Date</label>
    <type>DateTime</type>
</CustomField>