Burak Sandbox/force-app/main/default/objects/Account/fields/Inbound_Date_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Date_Calendly__c</fullName>
    <label>Inbound Date Calendly</label>
    <type>DateTime</type>
</CustomField>