Burak Sandbox/force-app/main/default/objects/Account/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
                <label>Interested - Technical AND Commercial Agreement Missing</label>
            </value>
            <value>
                <fullName>Technical or Commercial Agreement Missing</fullName>
                <label>Interested - Technical OR Commercial Agreement Missing</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Blocked by Business Process</fullName>
            </value>
            <value>
                <fullName>Blocked by Technical Process</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>