Burak Sandbox/force-app/main/default/objects/Account/fields/Integration_Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Integration_Jira_Link__c</fullName>
    <label>Integration Jira Link</label>
    <type>Url</type>
</CustomField>