Burak Sandbox/force-app/main/default/objects/Account/fields/Integration_Specs__c.field-meta.xml
<CustomField>
    <fullName>Integration_Specs__c</fullName>
    <inlineHelpText>details on name/type of ERP (EDI / EDIFACT/..)</inlineHelpText>
    <label>Integration Specs</label>
    <type>TextArea</type>
</CustomField>