Burak Sandbox/force-app/main/default/objects/Account/fields/Invalid_Place_ID__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Place_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Place ID</label>
    <type>Checkbox</type>
</CustomField>