Burak Sandbox/force-app/main/default/objects/Account/fields/Invested_Capital__c.field-meta.xml
<CustomField>
    <fullName>Invested_Capital__c</fullName>
    <description>This field depicts the amount of capital invested into European firms</description>
    <label>Invested Capital</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>