Burak Sandbox/force-app/main/default/objects/Account/fields/L12W_confirmed_orders__c.field-meta.xml
<CustomField>
    <fullName>L12W_confirmed_orders__c</fullName>
    <label>L12W confirmed orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>